[gd_scene load_steps=2 format=3 uid="uid://dc2r43mchebnk"]

[ext_resource type="Script" path="res://ui/confirmable_button.gd" id="1_46s3k"]

[node name="ConfirmableButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_46s3k")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(400, 100)

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
